fix: align items centre for header

--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ header {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    align-items: center;
 }
 
 footer {
